refactor(staff): centralize active assignment authorization